# snippet-selection-pipeline

./: .gitignore  README.md
config/: checkers.yaml  pipeline.yaml
orchestrator/: pyproject.toml
orchestrator/scripts/: convert_legacy_xlsx.py
orchestrator/snippet_pipeline/: candidates.py  checkers.py  classpath.py  cli.py  config.py  method_analyzer.py  packaging.py  specimin.py  stats.py
orchestrator/templates/: snippet_build.gradle.kts.j2
tests/: test_candidates.py  test_checkers.py  test_classpath.py  test_cli.py  test_config.py  test_convert_legacy_xlsx.py  test_packaging.py  test_run_id_continuity.py  test_specimin.py  test_stats.py
tools/method-analyzer/: README.md  build.gradle.kts  settings.gradle.kts
tools/method-analyzer/eval/repos/: main_methods.csv
tools/method-analyzer/eval/repos/main/: ExpressionAnalysisSample.java
tools/method-analyzer/gradle/wrapper/: gradle-wrapper.properties
tools/method-analyzer/src/main/java/com/github/erfanarvan/methodanalyzerapp/: CSVWriter.java  DirectoryProcessor.java  JavaFileProcessor.java  JdkOnlyTypeChecker.java  LocateMethod.java  Main.java  ManifestWriter.java  MethodExtractor.java  MethodLineCounter.java  MethodRecord.java  ProjectProcessor.java  QualifiedNameUtils.java  ResolveMethodSignature.java  TypeUtils.java
tools/method-analyzer/src/test/java/com/github/erfanarvan/methodanalyzerapp/: CSVWriterTest.java  GroundTruthTest.java  MethodExtractorCriteriaTest.java  ResolveMethodSignatureTest.java  TypeUtilsTest.java
